unpackaged/main/default/objects/Account/fields/cfg_Undeliverable_Notes__c.field-meta.xml
<CustomField>
        <fullName>cfg_Undeliverable_Notes__c</fullName>
        <label>Undeliverable Notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Returned Mail/No Forwarding Address</fullName>
                </value>
                <value>
                    <fullName>Data Hygiene/NCOA updates</fullName>
                </value>
                <value>
                    <fullName>Donor told us</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Anytown Address</fullName>
                </value>
                <value>
                    <fullName>Address has been updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>