unpackaged/main/default/objects/Account/fields/cfg_Unique__c.field-meta.xml
<CustomField>
        <fullName>cfg_Unique__c</fullName>
        <description>Use in reports to get unique count of accounts (power of one).</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use in reports to get unique count of accounts (power of one).</inlineHelpText>
        <label># Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>