unpackaged/main/default/objects/Account/fields/Level__c.field-meta.xml
<CustomField>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </CustomField>