unpackaged/main/default/objects/Account/fields/Previous_Level__c.field-meta.xml
<CustomField>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Previous Level field for use with new Level feature. May be edited or deleted as needed.</description>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households (Previous Level)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </CustomField>