unpackaged/main/default/objects/Account/recordTypes/HH_Account.recordType-meta.xml
<RecordType>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </RecordType>