unpackaged/main/default/objects/Account/listViews/Household_Accounts.listView-meta.xml
<ListView>
        <fullName>Household_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npo02__Formal_Greeting__c</columns>
        <columns>npo02__Informal_Greeting__c</columns>
        <columns>npo02__TotalOppAmount__c</columns>
        <columns>npo02__AverageAmount__c</columns>
        <columns>npo02__Best_Gift_Year__c</columns>
        <columns>npo02__HouseholdPhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HH_Account</value>
        </filters>
        <label>Household Accounts</label>
    </ListView>