unpackaged/main/default/objects/Account/listViews/MyOrganizations.listView-meta.xml
<ListView>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </ListView>