unpackaged/main/default/objects/Account/listViews/Organization_Accounts.listView-meta.xml
<ListView>
        <fullName>Organization_Accounts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>Organization Accounts</label>
    </ListView>